--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -41,47 +41,49 @@ nav:
           - Operate OMAG Server: guides/operations/operating-omag-server.md
           - Egeria in Kubernetes: guides/operations/kubernetes/intro.md
       - Integrate:
-            - Developer Guide:
-                  - Developer Overview: guides/developer/index.md
-                  - Modelling Schema: guides/developer/modelling-schema.md
-                  - Building Connectors:
-                        - Integration Connectors: guides/developer/integration-connectors/overview.md
-                        - Repository Connectors: guides/developer/repository-connectors/overview.md
-                        - Runtime Connectors:
-                              - Audit Log Store: guides/developer/runtime-connectors/audit-log-store-connector.md
-                              - Cohort Registry Store: guides/developer/runtime-connectors/cohort-registry-store-connector.md
-                              - Configuration Document Store: guides/developer/runtime-connectors/configuration-document-store-connector.md
-                              - Open Metadata Archive Store: guides/developer/runtime-connectors/open-metadata-store-connector.md
-                              - Open Metadata Topic: guides/developer/runtime-connectors/open-metadata-topic-connector.md
-            - Connector Catalog:
-                  - Connector Overview: connectors/index.md
-                  - Governance Actions:
-                        - Generic Element Watchdog: connectors/governance-action/generic-element-watchdog-governance-action-service.md
-                        - Generic Folder Watchdog: connectors/governance-action/generic-folder-watchdog-governance-action-service.md
-                        - Move/Copy File Provisioning: connectors/governance-action/move-copy-file-provisioning-governance-action-service.md
-                        - Origin Seeker Remediation: connectors/governance-action/origin-seeker-remediation-governance-action-service.md
-                  - Integration:
-                        - File Connectors:
-                              - Data Files Monitor: connectors/integration/data-files-monitor-integration-connector.md
-                              - Data Folder Monitor: connectors/integration/data-folder-monitor-integration-connector.md
-                        - Topic Connectors:
-                              - Kafka Monitor Connector: connectors/integration/kafka-monitor-integration-connector.md
-                        - API Connectors:
-                              - Open API Monitor Connector: connectors/integration/open-api-monitor-integration-connector.md
-                  - Repository:
-                        - Pluggable Repositories:
-                              - XTDB:
-                                    - XTDB OMRS Repository Connector: connectors/repository/xtdb/index.md
-                                    - Upgrading the XTDB Connector: connectors/repository/xtdb/upgrade.md
-                                    - XTDB Connector Performance: connectors/repository/xtdb/performance.md
-                              - JanusGraph OMRS Repository Connector: connectors/repository/janus-graph/overview.md
-                              - In-memory OMRS Repository Connector: connectors/repository/in-memory/overview.md
-                              - Read-only OMRS Repository Connector: connectors/repository/read-only/overview.md
-                        - Repository Adapters:
-                              - Apache Atlas OMRS Repository Connector: connectors/repository/apache-atlas/overview.md
-                              - IBM Information Governance Catalog (IGC) OMRS Repository Connector: connectors/repository/ibm-information-server/index.md
-                              - SAS Viya OMRS Repository Connector: connectors/repository/sas-viya/overview.md
+          - Developer Guide:
+                - Developer Overview: guides/developer/index.md
+                - Modelling Schema: guides/developer/modelling-schema.md
+                - Building Connectors:
+                      - Integration Connectors: guides/developer/integration-connectors/overview.md
+                      - Repository Connectors: guides/developer/repository-connectors/overview.md
+                      - Runtime Connectors:
+                            - Audit Log Store: guides/developer/runtime-connectors/audit-log-store-connector.md
+                            - Cohort Registry Store: guides/developer/runtime-connectors/cohort-registry-store-connector.md
+                            - Configuration Document Store: guides/developer/runtime-connectors/configuration-document-store-connector.md
+                            - Open Metadata Archive Store: guides/developer/runtime-connectors/open-metadata-store-connector.md
+                            - Open Metadata Topic: guides/developer/runtime-connectors/open-metadata-topic-connector.md
+          - Connector Catalog:
+                - Connector Overview: connectors/index.md
+                - Governance Actions:
+                      - Generic Element Watchdog: connectors/governance-action/generic-element-watchdog-governance-action-service.md
+                      - Generic Folder Watchdog: connectors/governance-action/generic-folder-watchdog-governance-action-service.md
+                      - Move/Copy File Provisioning: connectors/governance-action/move-copy-file-provisioning-governance-action-service.md
+                      - Origin Seeker Remediation: connectors/governance-action/origin-seeker-remediation-governance-action-service.md
+                - Integration:
+                      - File Connectors:
+                            - Data Files Monitor: connectors/integration/data-files-monitor-integration-connector.md
+                            - Data Folder Monitor: connectors/integration/data-folder-monitor-integration-connector.md
+                      - Topic Connectors:
+                            - Kafka Monitor Connector: connectors/integration/kafka-monitor-integration-connector.md
+                      - API Connectors:
+                            - Open API Monitor Connector: connectors/integration/open-api-monitor-integration-connector.md
+                - Repository:
+                      - Pluggable Repositories:
+                            - XTDB:
+                                  - XTDB OMRS Repository Connector: connectors/repository/xtdb/index.md
+                                  - Upgrading the XTDB Connector: connectors/repository/xtdb/upgrade.md
+                                  - XTDB Connector Performance: connectors/repository/xtdb/performance.md
+                            - JanusGraph OMRS Repository Connector: connectors/repository/janus-graph/overview.md
+                            - In-memory OMRS Repository Connector: connectors/repository/in-memory/overview.md
+                            - Read-only OMRS Repository Connector: connectors/repository/read-only/overview.md
+                      - Repository Adapters:
+                            - Apache Atlas OMRS Repository Connector: connectors/repository/apache-atlas/overview.md
+                            - IBM Information Governance Catalog (IGC) OMRS Repository Connector: connectors/repository/ibm-information-server/index.md
+                            - SAS Viya OMRS Repository Connector: connectors/repository/sas-viya/overview.md
+                    - Repository:
       - Features:
+          - Features Overview: features/index.md
           - Anchor Management: features/anchor-management/overview.md
           - Cohort Operation: features/cohort-operation/overview.md
           - Discovery and Stewardship: features/discovery-and-stewardship/overview.md
@@ -102,17 +104,41 @@ nav:
           - Templated Cataloguing: features/templated-cataloguing/overview.md
           - User Feedback: features/user-feedback/overview.md
   - Learning:
-      - Dojo:
-          - Dojo Introduction: getting-started/dojo/introduction.md
+      - Existing Dojo:
+          - Dojo Introduction: getting-started/dojo/index.md
           - Day 1:
-              - Egeria Introduction: getting-started/dojo/1/introduction.md
-              - Egeria Project Introduction: getting-started/dojo/1/project-introduction.md
-              - Running Egeria: getting-started/dojo/1/running-egeria.md
-              - Configuring the OMAG Server Platform: getting-started/dojo/1/configuring-the-platform.md
-          - Day 2: getting-started/dojo/2/index.md
-          - Day 3: getting-started/dojo/3/index.md
+              - Egeria Introduction: getting-started/dojo/egeria-dojo-day-1-1-introduction.md
+              - Egeria Project Introduction: getting-started/dojo/egeria-dojo-day-1-2-project-introduction.md
+              - Running Egeria: getting-started/dojo/egeria-dojo-day-1-3-running-egeria.md
+                - Platform Setup and Configuration: getting-started/dojo/egeria-dojo-day-1-3-1-platform-set-up-and-configuration.md
+                  - Prerequisites: getting-started/dojo/egeria-dojo-day-1-3-1-1-platform-set-up-prerequisites.md
+                  - Configuring the Platform: getting-started/dojo/egeria-dojo-day-1-3-1-2-configuring-the-platform.md
+                  - Confiiguring a Server: getting-started/dojo/egeria-dojo-day-1-3-1-3-configuring-a-server.md
+                - Running Metadata Access Servers: getting-started/dojo/egeria-dojo-day-1-3-2-running-metadata-servers.md
+                  - Starting Server: getting-started/dojo/egeria-dojo-day-1-3-2-1-starting-the-server.md
+                  - Calling Server API: getting-started/dojo/egeria-dojo-day-1-3-2-2-calling-server-api.md
+                  - Working with Archives: getting-started/dojo/egeria-dojo-day-1-3-2-3-working-with-archives.md
+                  - Second Server: getting-started/dojo/egeria-dojo-day-1-3-2-4-second-server.md
+                - Running Metadata Ecosystems: getting-started/dojo/egeria-dojo-day-1-3-3-running-metadata-ecosystems.md
+                  - Running User Interfaces: getting-started/dojo/egeria-dojo-day-1-3-3-1-running-ui.md
+                  - Running Governance Servers: getting-started/dojo/egeria-dojo-day-1-3-3-2-running-governance-servers.md
+                  - Running Kubernetes and Labs: getting-started/dojo/egeria-dojo-day-1-3-3-3-kubernetes-and-labs.md
+              - Participating in the Community: getting-started/dojo/egeria-dojo-day-1-4-participating-in-the-community.md
+          - Day 2:
+              - Open Source Philosophy: getting-started/dojo/egeria-dojo-day-2-1-open-source-philosophy.md
+              - Tools for Contributors: getting-started/dojo/egeria-dojo-day-2-2-tools-for-contributors.md
+              - Contributing to Egeria: getting-started/dojo/egeria-dojo-day-2-3-contribution-to-egeria.md
+              - Type of Contribution: getting-started/dojo/egeria-dojo-day-2-4-types-of-contribution.md
+              - Becoming a Contributor: getting-started/dojo/egeria-dojo-day-2-5-becoming-a-contributor.md
+          - Day 3:
+              - Becoming an Advocate: getting-started/dojo/egeria-dojo-day-3-1-becoming-an-advocate.md
+              - Becoming a Maintainer: getting-started/dojo/egeria-dojo-day-3-2-becoming-a-maintainer.md
+              - Egeria Architecture: getting-started/dojo/egeria-dojo-day-3-3-egeria-architecture.md
+              - Egeria Social: getting-started/dojo/egeria-dojo-day-3-4-egeria-social.md
+      - New Dojo:
+          - Dojo Overview: education/egeria-dojo/index.md
       - Hands-on Labs:
-          - Hands-on Labs Overview: getting-started/hands-on-labs/index.md
+          - Open Metadata Labs: education/open-metadata-labs.md
       - Tutorials:
           - Building Egeria: getting-started/tutorials/building-egeria.md
           - Docker Tutorial: getting-started/tutorials/docker.md
@@ -142,7 +168,7 @@ nav:
   - Contributing:
       - Community Guide: guides/community.md
       - Project Operations: guides/project-operations.md
-      - Develop:
+      - Code:
           - Coding Guidelines: guides/contributor/guidelines.md
           - Way of Working: guides/contributor/process.md
           - Specific Guidance:
@@ -483,7 +509,7 @@ nav:
               - Environment: guides/cts/profiles/environment.md
   - Concepts:
       - Egeria Glossary: concepts/index.md
-      - Basic Concepts: basic-concepts.md
+      - Basic Concepts: concepts/basic-concepts.md
       - Anchor: concepts/anchor.md
       - Asset: concepts/asset.md
       - Asset Log Message: concepts/asset-log-message.md
@@ -510,9 +536,10 @@ nav:
       - Engine Host: concepts/engine-host.md
       - Event Bus: concepts/event-bus.md
       - External Reference: concepts/external-reference.md
-      - Favorite Collections: concepts/favorite-things-collections.md
+      - Favorite Collections: concepts/favorite-things-collection.md
       - Feedback: concepts/feedback.md
       - Glossary Term: concepts/glossary-term.md
+      - GUID: concepts/guid.md
       - Governance Action: concepts/governance-action.md
       - Governance Action Engine: concepts/governance-action-engine.md
       - Governance Action Process: concepts/governance-action-process.md
@@ -544,11 +571,13 @@ nav:
       - OMAG Subsystem: concepts/omag-subsystem.md
       - Open Discovery Engine: concepts/open-discovery-engine.md
       - Open Discovery Server: concepts/open-discovery-server.md
+      - Open Discovery Service: concepts/open-discovery-service.md
       - Open Lineage Server: concepts/open-lineage-server.md
       - Open Metadata Archive: concepts/open-metadata-archive.md
       - Open Metadata Exchange Rule: concepts/open-metadata-exchange-rule.md
       - Open Metadata Instance: concepts/open-metadata-instances.md
       - Open Metadata Type Definitions: concepts/open-metadata-type-definitions.md
+      - Organization: concepts/organization.md
       - Out Topic: concepts/out-topic.md
       - Peer Network: concepts/peer-network.md
       - Personal Messsge: concepts/personal-message.md
@@ -559,6 +588,7 @@ nav:
       - Presentation Server: concepts/presentation-server.md
       - Project: concepts/project.md
       - Referenceable: concepts/referenceable.md
+      - Repository connector: concepts/repository-connector.md
       - Repository Helper: concepts/repository-helper.md
       - Repository Proxy: concepts/repository-proxy.md
       - Repository Validator: concepts/repository-validator.md
