--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -137,8 +137,13 @@ nav:
               - Becoming a Maintainer: getting-started/dojo/egeria-dojo-day-3-2-becoming-a-maintainer.md
               - Egeria Architecture: getting-started/dojo/egeria-dojo-day-3-3-egeria-architecture.md
               - Egeria Social: getting-started/dojo/egeria-dojo-day-3-4-egeria-social.md
-      - New Dojo:
+      - New Dojo (In Development):
           - Dojo Overview: education/egeria-dojo/index.md
+          - Running Egeria Day : education/egeria-dojo/running-egeria.md
+          - Developer Day : education/egeria-dojo/developer.md
+          - Metadata Governance Day : education/egeria-dojo/metadata-governance.md
+          - Egeria Contributor Day : education/egeria-dojo/egeria-contributor.md
+          - Egeria in Production Day : education/egeria-dojo/egeria-in-production.md
       - Hands-on Labs:
           - Open Metadata Labs: education/open-metadata-labs.md
       - Tutorials:
