--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -111,17 +111,21 @@ nav:
           - Day 1:
               - Egeria Introduction: getting-started/dojo/egeria-dojo-day-1-1-introduction.md
               - Egeria Project Introduction: getting-started/dojo/egeria-dojo-day-1-2-project-introduction.md
-              - Running Egeria: getting-started/dojo/egeria-dojo-day-1-3-running-egeria.md
-                - Platform Setup and Configuration: getting-started/dojo/egeria-dojo-day-1-3-1-platform-set-up-and-configuration.md
+              - Running Egeria:
+                - Overview: getting-started/dojo/egeria-dojo-day-1-3-running-egeria.md
+                - Platform Setup and Configuration:
+                  - Overview: getting-started/dojo/egeria-dojo-day-1-3-1-platform-set-up-and-configuration.md
                   - Prerequisites: getting-started/dojo/egeria-dojo-day-1-3-1-1-platform-set-up-prerequisites.md
                   - Configuring the Platform: getting-started/dojo/egeria-dojo-day-1-3-1-2-configuring-the-platform.md
                   - Confiiguring a Server: getting-started/dojo/egeria-dojo-day-1-3-1-3-configuring-a-server.md
-                - Running Metadata Access Servers: getting-started/dojo/egeria-dojo-day-1-3-2-running-metadata-servers.md
+                - Running Metadata Access Servers:
+                  - Overview: getting-started/dojo/egeria-dojo-day-1-3-2-running-metadata-servers.md
                   - Starting Server: getting-started/dojo/egeria-dojo-day-1-3-2-1-starting-the-server.md
                   - Calling Server API: getting-started/dojo/egeria-dojo-day-1-3-2-2-calling-server-api.md
                   - Working with Archives: getting-started/dojo/egeria-dojo-day-1-3-2-3-working-with-archives.md
                   - Second Server: getting-started/dojo/egeria-dojo-day-1-3-2-4-second-server.md
-                - Running Metadata Ecosystems: getting-started/dojo/egeria-dojo-day-1-3-3-running-metadata-ecosystems.md
+                - Running Metadata Ecosystems:
+                  - Overview: getting-started/dojo/egeria-dojo-day-1-3-3-running-metadata-ecosystems.md
                   - Running User Interfaces: getting-started/dojo/egeria-dojo-day-1-3-3-1-running-ui.md
                   - Running Governance Servers: getting-started/dojo/egeria-dojo-day-1-3-3-2-running-governance-servers.md
                   - Running Kubernetes and Labs: getting-started/dojo/egeria-dojo-day-1-3-3-3-kubernetes-and-labs.md
