--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -79,6 +79,12 @@ nav:
                             - Kafka Monitor Connector: connectors/integration/kafka-monitor-integration-connector.md
                       - API Connectors:
                             - Open API Monitor Connector: connectors/integration/open-api-monitor-integration-connector.md
+                      - Lineage Connectors:
+                            - OpenLineage Event Receiver : connectors/integration/open-lineage-event-receiver-integration-connector.md
+                            - OpenLineage API Log Store : connectors/integration/api-based-open-lineage-log-store-integration-connector.md
+                            - OpenLineage File Log Store: connectors/integration/file-based-open-lineage-log-store-integration-connector.md
+                            - OpenLineage Cataloguer : connectors/integration/open-lineage-cataloguer-integration-connector.md
+                            - Governance Action OpenLineage Integrator : connectors/integration/governance-action-open-lineage-integration-connector.md
                 - Runtime:
                       - Repository:
                             - Pluggable Repositories:
