--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -271,8 +271,8 @@ nav:
               - Servers and Assets: types/0/0045-Servers-and-Assets.md
               - Applications and Processes: types/0/0050-Applications-and-Processes.md
               - Data Processing Engines: types/0/0055-Data-Processing-Engines.md
-              - Asset Managers: types/0/0056Asset-Managers.md
-              - Integration Capabilities: types/0/0057-Software-Services.md
+              - Asset Managers: types/0/0056-Asset-Managers.md
+              - Software Services: types/0/0057-Software-Services.md
               - Networks and Gateways: types/0/0070-Networks-and-Gateways.md
               - Cloud Platforms and Services: types/0/0090-Cloud-Platforms-and-Services.md
           - 1. Collaboration:
@@ -335,7 +335,7 @@ nav:
               - Governance Controls: types/4/0420-Governance-Controls.md
               - Governance Classification Levels: types/4/0421-Governance-Classification-Levels.md
               - Governance Action Classifications: types/4/0422-Governance-Action-Classifications.md
-              - Security Tags: types/4/0423-Security-Tags.md
+              - Security Definitions: types/4/0423-Security-Definitions.md
               - Governance Zones: types/4/0424-Governance-Zones.md
               - Subject Areas: types/4/0425-Subject-Areas.md
               - Technical Controls: types/4/0430-Technical-Controls.md
