--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -221,8 +221,8 @@ nav:
   - Releases:
       - Overview: release-notes/overview.md
       - Release Notes:
-        # - Latest Release: release-notes/latest.md
-        # - Next Release: release-notes/next.md
+        - Latest Release: release-notes/latest.md
+        - Next Release: release-notes/next.md
         - v3.3: release-notes/3-3.md
         - v3.2: release-notes/3-2.md
         - v3.1: release-notes/3-1.md
