Reorganizing webinar material
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -184,20 +184,7 @@ nav:
       - Scenarios:
           - Data Manager Integration: scenarios/data-manager-integration/overview.md
           - File Lineage: scenarios/file-lineage/overview.md
-      - Webinars:
-          - Previous Webinars:
-              - Beyond cataloguing December 2021: education/previous-webinars/december-2021/overview.md
-              - Open Lineage November 2021: education/previous-webinars/november-2021/README.md
-              - The value of Egeria October 2021: education/previous-webinars/october-2021/README.md
-              - Visualising a metadata eco system September 2021: education/previous-webinars/september-2021/README.md
-              - Date Lake and Egeria June 2020: education/previous-webinars/june-2020/README.md
-              - Building a Data Catalog April 2020: education/previous-webinars/april-2020/README.md
-              - Metadata for Data Driven Organization March 2020 : education/previous-webinars/march-2020/README.md
-              - Egeria and Palisade December 2019 : education/previous-webinars/december-2019/README.md
-              - Privacy July 2018: education/previous-webinars/july-2018/README.md
-              - Open Metadata Standards April 2018: education/previous-webinars/april-2018/README.md
-              - Free Metadata October 2017: education/previous-webinars/october-2017/README.md
-          - Planned Webinars: education/planned-webinars/overview.md
+      - Webinars: education/webinar-program/overview.md
   - Contributing:
       - Community Guide: guides/community.md
       - Project Operations: guides/project-operations.md
